--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/BOMI_logo_noback.png" alt="Bomi logo" class="home__logo">
+        <button class="home__contect">CONTECT ME</button>
+    </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Projects -->
