--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="major__title">ASP.net</div>
                 <div class="major__description">
-                    C#, ASP.net
+                    C#, .net
                 </div>
             </div>
         </div>
@@ -96,7 +96,32 @@
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <p>
+            '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이 배웠습니다.<br/>
+            개발 지식을 모르는 다른 분들과의 소통에도 자신이 있고, 개발자 분들과의 원활한 소통을 위해 기본적인 CS지식에도 관심을 갖고 열심히 공부중에 있습니다.
+        </p>
+        <div class="skillset">
+            <div class="skillset__progress">
+                <div class="skillset__progress__html"><span class="title">HTML</span></div>
+                <div class="skillset__progress__CSS"><span class="title">CSS</span></div>
+                <div class="skillset__progress__Js"><span class="title">Java Script</span></div>
+                <div class="skillset__progress__Java"><span class="title">Java</span></div>
+                <div class="skillset__progress__Spring"><span class="title">Spring</span></div>
+                <div class="skillset__progress__C"><span class="title">C#</span></div>
+                <div class="skillset__progress__net"><span class="title">.net</span></div>
+            </div>
+            <div class="skillset__bottom">
+                <span class="tools">
+                    Tools : Visual Studio, Visual Studio Code, IntelliJ
+                </span>
+                <span class="etc">
+                    Etc : Git, SVN, h2, MariaDB, MSSQL
+                </span>
+            </div>
+        </div>
+    </section>
     <!-- Projects -->
     <section id="projects"></section>
     <!-- Contact -->
