--- a/index.html
+++ b/index.html
@@ -123,7 +123,51 @@
         </div>
     </section>
     <!-- Projects -->
-    <section id="projects"></section>
+    <section id="projects">
+        <h1>Projects</h1>
+        <div class="projets__categories">
+            <button class="category__btn"> 
+                All<span class="category__count">4</span>
+            </button>
+            <button class="category__btn">
+                Team<span class="category__count">1</span>
+            </button>
+            <button class="category__btn">
+                Single<span class="category__count">3</span>
+            </button>
+        </div>
+        <div class="projects__list">
+            <a href="https://github.com/MinJeung-Kim/Team-Project.git" class="project" target="blank">
+                <img class="project__img" src="imgs/nike_logo.png" alt="nike">
+                <div class="progect__discription">
+                    <h3>NIKE Clone Coding</h3>
+                    <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
+                </div>
+            </a>
+            <a href="https://github.com/bom318/BoardPractice.git" class="project" target="blank">
+                <img class="project__img" src="imgs/net_board.png" alt="board">
+                <div class="progect__discription">
+                    <h3>.net Board</h3>
+                    <span>HTML, CSS, Javascript, C#, .net, MS server</span>
+                </div>
+            </a>
+            <a href="https://github.com/bom318/UpdatePractice.git" class="project" target="blank">
+                <img class="project__img" src="imgs/FILE.png" alt="file_upload">
+                <div class="progect__discription">
+                    <h3>.net File Management</h3>
+                    <span>HTML, CSS, Javascript, C#, .net, MS server</span>
+                </div>
+            </a>
+            <a href="" class="project" target="blank">
+                <img class="project__img" src="imgs/ready.png" alt="my recipe">
+                <div class="progect__discription">
+                    <h3>My Recipe</h3>
+                    <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
+                </div>
+            </a>
+
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 
