--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
             </button>
         </div>
         <div class="projects__list">
-            <a href="https://github.com/MinJeung-Kim/Team-Project.git" class="project" target="blank">
+            <a href="https://github.com/MinJeung-Kim/Team-Project.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/nike_logo.png" alt="nike">
                 <div class="progect__discription">
                     <h3>NIKE Clone Coding</h3>
                     <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
                 </div>
             </a>
-            <a href="https://github.com/bom318/BoardPractice.git" class="project" target="blank">
+            <a href="https://github.com/bom318/BoardPractice.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/net_board.png" alt="board">
                 <div class="progect__discription">
                     <h3>.net Board</h3>
                     <span>HTML, CSS, Javascript, C#, .net, MS server</span>
                 </div>
             </a>
-            <a href="https://github.com/bom318/UpdatePractice.git" class="project" target="blank">
+            <a href="https://github.com/bom318/UpdatePractice.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/FILE.png" alt="file_upload">
                 <div class="progect__discription">
                     <h3>.net File Management</h3>
                     <span>HTML, CSS, Javascript, C#, .net, MS server</span>
                 </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="_blank">
                 <img class="project__img" src="imgs/ready.png" alt="my recipe">
                 <div class="progect__discription">
                     <h3>My Recipe</h3>
@@ -169,7 +169,21 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Contact Me</h1>
+        <h2 class="contact__email">kimu_u@naver.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/bom318" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://bombomi.tistory.com/" target="_blank">
+                <i class="fa-solid fa-blog"></i>
+            </a>
+        </div>
+        <p class="contact__rights">
+            2022 made by.Bomi
+        </p>
+    </section>
 
 </body>
 
