--- a/index.html
+++ b/index.html
@@ -17,25 +17,27 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav id="navbar">
-        <div class="navbar__logo">
-            <i class="fa-solid fa-heart"></i>
-        </div>
-        <div class="navbar__menu">
-            <ul class="navbar__menu">
-                <li class="navbar__menu__item">Home</li>
-                <li class="navbar__menu__item">About</li>
-                <li class="navbar__menu__item">Skills</li>
-                <li class="navbar__menu__item">Projects</li>
-                <li class="navbar__menu__item">Contact</li>
-            </ul>
-        </div>
-    </nav>
+
     <!-- Home -->
     <section id="home">
+        <!-- Navbar -->
+        <nav id="navbar">
+            <div class="navbar__logo">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <div class="navbar__menu">
+                <ul class="navbar__menu">
+                    <li class="navbar__menu__item">Home</li>
+                    <li class="navbar__menu__item">About</li>
+                    <li class="navbar__menu__item">Skills</li>
+                    <li class="navbar__menu__item">Projects</li>
+                    <li class="navbar__menu__item">Contact</li>
+                </ul>
+            </div>
+        </nav>
+        <!-- logo -->
         <img src="imgs/BOMI_logo_noback.png" alt="Bomi logo" class="home__logo">
-        <button class="home__contect">CONTECT ME</button>
+        <br/><button class="home__contect">CONTECT ME</button>
     </section>
     <!-- About -->
     <section id="about">
@@ -44,10 +46,10 @@
             <img src="imgs/profile.jpg" alt="Profile" class="about__photo">
             <p class="about__intro__title">즐겁고 욕심있게 공부하는 개발자</p>
             <p class="about__intro__description">
-                전공자도 관련 경력자도 아닌 제가 '개발' 일을 선택한 단 한가지 이유는 끊임없이 공부해야 한다는 것이었습니다.<br/>
-                계속해서 성장하며 여러 문제들을 해결해 나간다는 점이 저의 인생 가치관과 잘 맞는다는 생각이 들었고, <br/>
-                이 일이 혼자하는 것이 아닌 다른 사람들과 함께 협력해 나간다는 점에서 저의 공동체 생활 경험들을 녹여 잘 소통할 수 있다고 생각했습니다.<br/>
-                많은 분들과 함께 끊임없이 성장하는 개발자가 되고 싶습니다. 
+                전공자도 관련 경력자도 아닌 제가 '개발' 일을 선택한 단 한가지 이유는 끊임없이 공부해야 한다는 것이었습니다.<br />
+                계속해서 성장하며 여러 문제들을 해결해 나간다는 점이 저의 인생 가치관과 잘 맞는다는 생각이 들었고, <br />
+                이 일이 혼자하는 것이 아닌 다른 사람들과 함께 협력해 나간다는 점에서 저의 공동체 생활 경험들을 녹여 잘 소통할 수 있다고 생각했습니다.<br />
+                많은 분들과 함께 끊임없이 성장하는 개발자가 되고 싶습니다.
             </p>
         </div>
         <div class="about__majors">
@@ -72,14 +74,14 @@
             <div class="major">
                 <div class="major__icon">
                     <div class="major">
-                <div class="major__icon">
-                    <i class="fa-solid fa-server"></i>
-                </div>
-                <div class="major__title">Spring Framework</div>
-                <div class="major__description">
-                    Java, Spring Framework, Spring Boot
-                </div>
-            </div>
+                        <div class="major__icon">
+                            <i class="fa-solid fa-server"></i>
+                        </div>
+                        <div class="major__title">Spring Framework</div>
+                        <div class="major__description">
+                            Java, Spring Framework, Spring Boot
+                        </div>
+                    </div>
                 </div>
                 <div class="major__title">ASP.net</div>
                 <div class="major__description">
@@ -99,7 +101,7 @@
     <section id="skills">
         <h1>Skills</h1>
         <p>
-            '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이 배웠습니다.<br/>
+            '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이 배웠습니다.<br />
             개발 지식을 모르는 다른 분들과의 소통에도 자신이 있고, 개발자 분들과의 원활한 소통을 위해 기본적인 CS지식에도 관심을 갖고 열심히 공부중에 있습니다.
         </p>
         <div class="skillset">
@@ -126,7 +128,7 @@
     <section id="projects">
         <h1>Projects</h1>
         <div class="projets__categories">
-            <button class="category__btn"> 
+            <button class="category__btn">
                 All<span class="category__count">4</span>
             </button>
             <button class="category__btn">
