--- a/index.html
+++ b/index.html
@@ -37,27 +37,33 @@
         </nav>
         <!-- logo -->
         <img src="imgs/BOMI_logo_noback.png" alt="Bomi logo" class="home__logo">
-        <br/><button class="home__contect">CONTECT ME</button>
+        <br /><button class="home__contect">CONTECT ME</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <div class="about__intro">
-            <img src="imgs/profile.jpg" alt="Profile" class="about__photo">
-            <p class="about__intro__title">즐겁고 욕심있게 공부하는 개발자</p>
-            <p class="about__intro__description">
-                전공자도 관련 경력자도 아닌 제가 '개발' 일을 선택한 단 한가지 이유는 끊임없이 공부해야 한다는 것이었습니다.<br />
-                계속해서 성장하며 여러 문제들을 해결해 나간다는 점이 저의 인생 가치관과 잘 맞는다는 생각이 들었고, <br />
-                이 일이 혼자하는 것이 아닌 다른 사람들과 함께 협력해 나간다는 점에서 저의 공동체 생활 경험들을 녹여 잘 소통할 수 있다고 생각했습니다.<br />
-                많은 분들과 함께 끊임없이 성장하는 개발자가 되고 싶습니다.
-            </p>
+            <div class="about__photo">
+                <img src="imgs/profile.jpg" alt="Profile">
+            </div>
+            <div class="about__contents">
+                <div class="about__intro__title">즐겁고 욕심있게 공부하는 개발자</div><br />
+                <div class="about__intro__description">
+                    전공자도 관련 경력자도 아닌 제가 '개발' 일을 선택한 단 한가지 이유는 끊임없이 공부해야 한다는 것이었습니다.<br />
+                    계속해서 성장하며 여러 문제들을 해결해 나간다는 점이 저의 인생 가치관과 잘 맞는다는 생각이 들었고, <br />
+                    이 일이 혼자하는 것이 아닌 다른 사람들과 함께 협력해 나간다는 점에서 저의 공동체 생활 경험들을 녹여 잘 소통할 수 있다고 생각했습니다.<br />
+                    많은 분들과 함께 끊임없이 성장하는 개발자가 되고 싶습니다.
+                </div>
+            </div>
+
+
         </div>
         <div class="about__majors">
             <div class="major">
                 <div class="major__icon">
                     <i class="fa-brands fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                     HTML, CSS, JavaScript
                 </div>
@@ -66,39 +72,34 @@
                 <div class="major__icon">
                     <i class="fa-solid fa-server"></i>
                 </div>
-                <div class="major__title">ASP.net</div>
+                <h2 class="major__title">ASP.net</h2>
                 <div class="major__description">
                     C#, ASP.net
                 </div>
             </div>
             <div class="major">
                 <div class="major__icon">
-                    <div class="major">
-                        <div class="major__icon">
-                            <i class="fa-solid fa-server"></i>
-                        </div>
-                        <div class="major__title">Spring Framework</div>
-                        <div class="major__description">
-                            Java, Spring Framework, Spring Boot
-                        </div>
-                    </div>
+                    <i class="fa-solid fa-server"></i>
                 </div>
-                <div class="major__title">ASP.net</div>
+                <h2 class="major__title">Spring Framework</h2>
                 <div class="major__description">
-                    C#, .net
+                    Java, Spring Framework, Spring Boot
                 </div>
             </div>
+        </div>
         </div>
         <div class="jobs">
             <div class="job">
                 <img src="imgs/KIC_logo.png" alt="academy" class="job__logo">
-                <p class="job__name">스프링 프레임워크 기반의 자바 웹개발자 양성과정 수료</p>
-                <p class="job__period">2020.12 ~ 2021.05</p>
+                <div class="job__description">
+                    <p class="job__name">스프링 프레임워크 기반의 자바 웹개발자 양성과정 수료</p>
+                    <p class="job__period">2020.12 ~ 2021.05</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <p>
             '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이 배웠습니다.<br />
@@ -125,7 +126,7 @@
         </div>
     </section>
     <!-- Projects -->
-    <section id="projects">
+    <section id="projects" class="section">
         <h1>Projects</h1>
         <div class="projets__categories">
             <button class="category__btn">
@@ -171,7 +172,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Contact Me</h1>
         <h2 class="contact__email">kimu_u@naver.com</h2>
         <div class="contact__links">
