--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br /><button class="home__contect">CONTECT ME</button>
     </section>
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <div class="about__intro">
             <div class="about__photo">
@@ -100,28 +100,33 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <p>
-            '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이 배웠습니다.<br />
-            개발 지식을 모르는 다른 분들과의 소통에도 자신이 있고, 개발자 분들과의 원활한 소통을 위해 기본적인 CS지식에도 관심을 갖고 열심히 공부중에 있습니다.
-        </p>
-        <div class="skillset">
-            <div class="skillset__progress">
-                <div class="skillset__progress__html"><span class="title">HTML</span></div>
-                <div class="skillset__progress__CSS"><span class="title">CSS</span></div>
-                <div class="skillset__progress__Js"><span class="title">Java Script</span></div>
-                <div class="skillset__progress__Java"><span class="title">Java</span></div>
-                <div class="skillset__progress__Spring"><span class="title">Spring</span></div>
-                <div class="skillset__progress__C"><span class="title">C#</span></div>
-                <div class="skillset__progress__net"><span class="title">.net</span></div>
-            </div>
-            <div class="skillset__bottom">
-                <span class="tools">
-                    Tools : Visual Studio, Visual Studio Code, IntelliJ
-                </span>
-                <span class="etc">
-                    Etc : Git, SVN, h2, MariaDB, MSSQL
-                </span>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <p>
+                '뮤지컬' 과 '보컬트레이너' 를 하면서 내가 맡은 일에 대한 책임감과 능동적인 태도, 그리고 다른 사람들과 보다 유연하게 소통할 수 있는 '커뮤니케이션 스킬' 을 많이
+                배웠습니다.<br />
+                개발 지식을 모르는 다른 분들과의 소통에도 자신이 있고, 개발자 분들과의 원활한 소통을 위해 기본적인 CS지식에도 관심을 갖고 열심히 공부중에 있습니다.
+            </p>
+            <div class="skillset">
+                <div class="skillset__progress">
+                    <div class="chart skillset__progress__html" style="background: conic-gradient(#fe918d 0% 90%, #eeeeee 90% 10%)"><span class="title">HTML</span></div>
+                    <div class="chart skillset__progress__CSS" style="background: conic-gradient(#fe918d 0% 80%, #eeeeee 80% 20%)"><span class="title">CSS</span></div>
+                    <div class="chart skillset__progress__Js" style="background: conic-gradient(#fe918d 0% 70%, #eeeeee 70% 30%)"><span class="title">Java Script</span></div>
+                </div>
+                <div class="skillset__progress">
+                    <div class="chart skillset__progress__Java" style="background: conic-gradient(#fe918d 0% 70%, #eeeeee 70% 30%)"><span class="title">Java</span></div>
+                    <div class="chart skillset__progress__Spring" style="background: conic-gradient(#fe918d 0% 70%, #eeeeee 70% 30%)"><span class="title">Spring</span></div>
+                    <div class="chart skillset__progress__C" style="background: conic-gradient(#fe918d 0% 60%, #eeeeee 60% 40%)"><span class="title">C#</span></div>
+                    <div class="chart skillset__progress__net" style="background: conic-gradient(#fe918d 0% 40%, #eeeeee 40% 60%)"><span class="title">.net</span></div>
+                </div>
+                <div class="skillset__bottom">
+                    <div class="tools">
+                        Tools : Visual Studio, Visual Studio Code, IntelliJ
+                    </div>
+                    <div class="etc">
+                        Etc : Git, SVN, h2, MariaDB, MSSQL
+                    </div>
+                </div>
             </div>
         </div>
     </section>
