--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                     <div class="chart skillset__progress__html" style="background: conic-gradient(#fe918d 0% 90%, #eeeeee 90% 10%)"><span class="title">HTML</span></div>
                     <div class="chart skillset__progress__CSS" style="background: conic-gradient(#fe918d 0% 80%, #eeeeee 80% 20%)"><span class="title">CSS</span></div>
                     <div class="chart skillset__progress__Js" style="background: conic-gradient(#fe918d 0% 70%, #eeeeee 70% 30%)"><span class="title">Java Script</span></div>
+                    
                 </div>
                 <div class="skillset__progress">
                     <div class="chart skillset__progress__Java" style="background: conic-gradient(#fe918d 0% 70%, #eeeeee 70% 30%)"><span class="title">Java</span></div>
@@ -147,28 +148,28 @@
         <div class="projects__list">
             <a href="https://github.com/MinJeung-Kim/Team-Project.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/nike_logo.png" alt="nike">
-                <div class="progect__discription">
+                <div class="project__description">
                     <h3>NIKE Clone Coding</h3>
                     <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
                 </div>
             </a>
             <a href="https://github.com/bom318/BoardPractice.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/net_board.png" alt="board">
-                <div class="progect__discription">
+                <div class="project__description">
                     <h3>.net Board</h3>
                     <span>HTML, CSS, Javascript, C#, .net, MS server</span>
                 </div>
             </a>
             <a href="https://github.com/bom318/UpdatePractice.git" class="project" target="_blank">
                 <img class="project__img" src="imgs/FILE.png" alt="file_upload">
-                <div class="progect__discription">
+                <div class="project__description">
                     <h3>.net File Management</h3>
                     <span>HTML, CSS, Javascript, C#, .net, MS server</span>
                 </div>
             </a>
             <a href="" class="project" target="_blank">
                 <img class="project__img" src="imgs/ready.png" alt="my recipe">
-                <div class="progect__discription">
+                <div class="project__description">
                     <h3>My Recipe</h3>
                     <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
                 </div>
