CSS_sectionContainer 추가

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     </section>
     <!-- Projects -->
     <section id="projects" class="section">
+       <div class="secion__container">
         <h1>Projects</h1>
         <div class="projets__categories">
             <button class="category__btn">
@@ -190,6 +191,7 @@
             </a>
 
         </div>
+       </div>
     </section>
     <!-- Contact -->
     <section id="contact" class="section">
