--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <li class="navbar__menu__item">Contact</li>
                 </ul>
             </div>
+            <!-- toggle button -->
+            <button class="navbar__toggle-btn">
+                <i class="fa-solid fa-bars"></i>
+            </button>
         </nav>
         <!-- logo -->
         <img src="imgs/BOMI_logo_noback.png" alt="Bomi logo" class="home__logo">
