--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <i class="fa-solid fa-heart"></i>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item" data-link="#home">Home</li>
+            <li class="navbar__menu__item selected" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
             <li class="navbar__menu__item" data-link="#skills">Skills</li>
             <li class="navbar__menu__item" data-link="#projects">Projects</li>
