bom board 프로젝트 추가

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                         <span>HTML, CSS, Javascript, C#, .net, MS server</span>
                     </div>
                 </a>
-                <a href="" class="project" target="_blank" data-type="solo">
-                    <img class="project__img" src="imgs/ready.png" alt="my recipe">
+                <a href="https://github.com/bom318/board-spring.git" class="project" target="_blank" data-type="solo">
+                    <img class="project__img" src="imgs/bomboard.png" alt="bom board">
                     <div class="project__description">
-                        <h3>My Recipe</h3>
+                        <h3>Bom board</h3>
                         <span>HTML, CSS, Javascript, Spring Boot, MariaDB</span>
                     </div>
                 </a>
